--- a/infrastructure/view/repository_branch_view.xml
+++ b/infrastructure/view/repository_branch_view.xml
@@ -1,101 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-##############################################################################
-#
-#    Infrastructure
-#    Copyright (C) 2014 Ingenieria ADHOC
-#    No email
-#
-#    This program is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU Affero General Public License as
-#    published by the Free Software Foundation, either version 3 of the
-#    License, or (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU Affero General Public License for more details.
-#
-#    You should have received a copy of the GNU Affero General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-##############################################################################
--->
-<!-- infrastructure.repository_branch -->
-<!-- infrastructure.repository_branch -->
 <!-- infrastructure.repository_branch -->
 <openerp>
-    <data>
+<data>
 
-        <!-- SEARCH VIEW -->
-        <record id="view_infrastructure_repository_branch_filter" model="ir.ui.view">
-            <field name="name">infrastructure.repository_branch.select</field>
-            <field name="model">infrastructure.repository_branch</field>
-            <field name="arch" type="xml">
-                <search string="repository_branch" version="7.0">
-                    <group string="By Attribute">
-                    <field name="name" string="Name"
-                            />
-                    </group>
-                    <group string="By object">
-                    </group>
-                </search>
-            </field>
-        </record>
+<!-- SEARCH VIEW -->
+<record id="view_infrastructure_repository_branch_filter" model="ir.ui.view">
+    <field name="name">infrastructure.repository_branch.select</field>
+    <field name="model">infrastructure.repository_branch</field>
+    <field name="arch" type="xml">
+        <search string="repository_branch" version="7.0">
+            <group string="By Attribute">
+                <field name="name" string="Name"/>
+            </group>
+            <group string="By object">
+            </group>
+        </search>
+    </field>
+</record>
 
-        <!-- FORMVIEW -->
-        <record id="view_infrastructure_repository_branch_form" model="ir.ui.view">
-            <field name="name">infrastructure.repository_branch.form</field>
-            <field name="model">infrastructure.repository_branch</field>
-            <field name="arch" type="xml">
-                <form string="repository_branch" version="7.0">
-                    <header>
-                    </header>
-                    <sheet string="repository_branch">
-                     <group>
-                        <field name="name"
-                            />
-                     </group>
-                    </sheet>
+<!-- FORMVIEW -->
+<record id="view_infrastructure_repository_branch_form" model="ir.ui.view">
+    <field name="name">infrastructure.repository_branch.form</field>
+    <field name="model">infrastructure.repository_branch</field>
+    <field name="arch" type="xml">
+        <form string="repository_branch" version="7.0">
+            <header>
+            </header>
+            <sheet string="repository_branch">
+             <group>
+                <field name="name"/>
+             </group>
+            </sheet>
+        </form>
+    </field>
+</record>
 
-                </form>
-            </field>
-        </record>
+<!-- TREEVIEW -->
+<record id="view_infrastructure_repository_branch_tree" model="ir.ui.view">
+    <field name="name">infrastructure.repository_branch.tree</field>
+    <field name="model">infrastructure.repository_branch</field>
+    <field name="arch" type="xml">
+        <tree string="repository_branch">
+            <field name="name"/>
+        </tree>
+    </field>
+</record>
 
-        <!-- TREEVIEW -->
+<record id="action_infrastructure_repository_branch_branches" model="ir.actions.act_window">
+    <field name="name">Branches</field>
+    <field name="res_model">infrastructure.repository_branch</field>
+    <field name="view_type">form</field>
+    <field name="view_mode">tree,form</field>
+    <field name="view_id" ref="view_infrastructure_repository_branch_tree"/>
+    <field name="search_view_id" ref="view_infrastructure_repository_branch_filter"/>
+    <field name="domain">[]</field>
+</record>
 
-        <record id="view_infrastructure_repository_branch_tree" model="ir.ui.view">
-            <field name="name">infrastructure.repository_branch.tree</field>
-            <field name="model">infrastructure.repository_branch</field>
-            <field name="arch" type="xml">
-                <tree string="repository_branch"
-                    >
-                    <field name="name"
-                        />
-                </tree>
-            </field>
-        </record>
+<menuitem
+    name="Branches"
+    id="menu_branches"
+    sequence="100"
+    action="action_infrastructure_repository_branch_branches"
+    parent="menu_repositories_conf"
+    groups="group_manager"
+    />
 
-    <record id="action_infrastructure_repository_branch_branches" model="ir.actions.act_window">
-        <field name="name">Branches</field>
-        <field name="res_model">infrastructure.repository_branch</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="view_infrastructure_repository_branch_tree"/>
-        <field name="search_view_id" ref="view_infrastructure_repository_branch_filter"/>
-        <field name="domain">[]</field>
-    </record>
-
-    <menuitem
-        name="Branches"
-        id="menu_branches"
-        sequence="100"
-        action="action_infrastructure_repository_branch_branches"
-        parent="menu_repositories_conf"
-        groups="group_manager"
-        />
-
-    </data>
+</data>
 </openerp>
-<!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
-     -->
