--- a/infrastructure/view/server_configuration_view.xml
+++ b/infrastructure/view/server_configuration_view.xml
@@ -1,103 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-##############################################################################
-#
-#    Infrastructure
-#    Copyright (C) 2014 Ingenieria ADHOC
-#    No email
-#
-#    This program is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU Affero General Public License as
-#    published by the Free Software Foundation, either version 3 of the
-#    License, or (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU Affero General Public License for more details.
-#
-#    You should have received a copy of the GNU Affero General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-##############################################################################
--->
-<!-- infrastructure.server_configuration -->
-<!-- infrastructure.server_configuration -->
 <!-- infrastructure.server_configuration -->
 <openerp>
-    <data>
+<data>
 
-        <!-- SEARCH VIEW -->
-        <record id="view_infrastructure_server_configuration_filter" model="ir.ui.view">
-            <field name="name">infrastructure.server_configuration.select</field>
-            <field name="model">infrastructure.server_configuration</field>
-            <field name="arch" type="xml">
-                <search string="server_configuration" version="7.0">
-                    <group string="By Attribute">
-                    <field name="name" string="Name"
-                            />
-                    </group>
-                    <group string="By object">
-                    </group>
-                </search>
-            </field>
-        </record>
+<!-- SEARCH VIEW -->
+<record id="view_infrastructure_server_configuration_filter" model="ir.ui.view">
+    <field name="name">infrastructure.server_configuration.select</field>
+    <field name="model">infrastructure.server_configuration</field>
+    <field name="arch" type="xml">
+        <search string="server_configuration" version="7.0">
+            <group string="By Attribute">
+                <field name="name" string="Name"/>
+            </group>
+            <group string="By object">
+            </group>
+        </search>
+    </field>
+</record>
 
-        <!-- FORMVIEW -->
-        <record id="view_infrastructure_server_configuration_form" model="ir.ui.view">
-            <field name="name">infrastructure.server_configuration.form</field>
-            <field name="model">infrastructure.server_configuration</field>
-            <field name="arch" type="xml">
-                <form string="server_configuration" version="7.0">
-                    <header>
-                    </header>
-                    <sheet string="server_configuration">
-                     <group>
-                        <field name="name"
-                            />
-                    <field name="install_command_ids"
-                            />
-                     </group>
-                    </sheet>
+<!-- FORMVIEW -->
+<record id="view_infrastructure_server_configuration_form" model="ir.ui.view">
+    <field name="name">infrastructure.server_configuration.form</field>
+    <field name="model">infrastructure.server_configuration</field>
+    <field name="arch" type="xml">
+        <form string="server_configuration" version="7.0">
+            <header>
+            </header>
+            <sheet string="server_configuration">
+             <group>
+                <field name="name"/>
+                <field name="install_command_ids"/>
+             </group>
+            </sheet>
+        </form>
+    </field>
+</record>
 
-                </form>
-            </field>
-        </record>
+<!-- TREEVIEW -->
+<record id="view_infrastructure_server_configuration_tree" model="ir.ui.view">
+    <field name="name">infrastructure.server_configuration.tree</field>
+    <field name="model">infrastructure.server_configuration</field>
+    <field name="arch" type="xml">
+        <tree string="server_configuration">
+            <field name="name"/>
+        </tree>
+    </field>
+</record>
 
-        <!-- TREEVIEW -->
+<record id="action_infrastructure_server_configuration_server_configurations" model="ir.actions.act_window">
+    <field name="name">Server Configurations</field>
+    <field name="res_model">infrastructure.server_configuration</field>
+    <field name="view_type">form</field>
+    <field name="view_mode">tree,form</field>
+    <field name="view_id" ref="view_infrastructure_server_configuration_tree"/>
+    <field name="search_view_id" ref="view_infrastructure_server_configuration_filter"/>
+    <field name="domain">[]</field>
+</record>
 
-        <record id="view_infrastructure_server_configuration_tree" model="ir.ui.view">
-            <field name="name">infrastructure.server_configuration.tree</field>
-            <field name="model">infrastructure.server_configuration</field>
-            <field name="arch" type="xml">
-                <tree string="server_configuration"
-                    >
-                    <field name="name"
-                        />
-                </tree>
-            </field>
-        </record>
+<menuitem
+    name="Server Configurations"
+    id="menu_server_configurations"
+    sequence="10"
+    action="action_infrastructure_server_configuration_server_configurations"
+    parent="menu_serv__env_and_inst"
+    groups="group_manager"
+    />
 
-    <record id="action_infrastructure_server_configuration_server_configurations" model="ir.actions.act_window">
-        <field name="name">Server Configurations</field>
-        <field name="res_model">infrastructure.server_configuration</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
-        <field name="view_id" ref="view_infrastructure_server_configuration_tree"/>
-        <field name="search_view_id" ref="view_infrastructure_server_configuration_filter"/>
-        <field name="domain">[]</field>
-    </record>
-
-    <menuitem
-        name="Server Configurations"
-        id="menu_server_configurations"
-        sequence="10"
-        action="action_infrastructure_server_configuration_server_configurations"
-        parent="menu_serv__env_and_inst"
-        groups="group_manager"
-        />
-
-    </data>
+</data>
 </openerp>
-<!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
-     -->
