[FIX] Some field names

--- a/infrastructure/view/database_type_view.xml
+++ b/infrastructure/view/database_type_view.xml
@@ -43,7 +43,7 @@
                     />
                 <field name="url_example"/>
                 <field name="db_name_example"/>
-                <field name="db_back_up_policy_ids"
+                <field name="db_backup_policy_ids"
                     widget="many2many_tags"
                     />
              </group>
