--- a/infrastructure/view/db_backup_policy_view.xml
+++ b/infrastructure/view/db_backup_policy_view.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- infrastructure.db_back_up_policy -->
+<!-- infrastructure.db_backup_policy -->
 <openerp>
 <data>
 
 <!-- SEARCH VIEW -->
-<record id="view_infrastructure_db_back_up_policy_filter" model="ir.ui.view">
-    <field name="name">infrastructure.db_back_up_policy.select</field>
-    <field name="model">infrastructure.db_back_up_policy</field>
+<record id="view_infrastructure_db_backup_policy_filter" model="ir.ui.view">
+    <field name="name">infrastructure.db_backup_policy.select</field>
+    <field name="model">infrastructure.db_backup_policy</field>
     <field name="arch" type="xml">
-        <search string="db_back_up_policy" version="7.0">
+        <search string="db_backup_policy" version="7.0">
             <group string="By Attribute">
                 <field name="name" string="name"/>
                 <field name="cron_id" string="Cron"/>
@@ -20,14 +20,14 @@
 </record>
 
 <!-- FORMVIEW -->
-<record id="view_infrastructure_db_back_up_policy_form" model="ir.ui.view">
-    <field name="name">infrastructure.db_back_up_policy.form</field>
-    <field name="model">infrastructure.db_back_up_policy</field>
+<record id="view_infrastructure_db_backup_policy_form" model="ir.ui.view">
+    <field name="name">infrastructure.db_backup_policy.form</field>
+    <field name="model">infrastructure.db_backup_policy</field>
     <field name="arch" type="xml">
-        <form string="db_back_up_policy" version="7.0">
+        <form string="db_backup_policy" version="7.0">
             <header>
             </header>
-            <sheet string="db_back_up_policy">
+            <sheet string="db_backup_policy">
              <group>
                 <field name="name"/>
                 <field name="cron_id"/>
@@ -38,32 +38,32 @@
 </record>
 
 <!-- TREEVIEW -->
-<record id="view_infrastructure_db_back_up_policy_tree" model="ir.ui.view">
-    <field name="name">infrastructure.db_back_up_policy.tree</field>
-    <field name="model">infrastructure.db_back_up_policy</field>
+<record id="view_infrastructure_db_backup_policy_tree" model="ir.ui.view">
+    <field name="name">infrastructure.db_backup_policy.tree</field>
+    <field name="model">infrastructure.db_backup_policy</field>
     <field name="arch" type="xml">
-        <tree string="db_back_up_policy">
+        <tree string="db_backup_policy">
             <field name="name"/>
             <field name="cron_id"/>
         </tree>
     </field>
 </record>
 
-<record id="action_infrastructure_db_back_up_policy_db_back_up_policies" model="ir.actions.act_window">
+<record id="action_infrastructure_db_backup_policy_db_backup_policies" model="ir.actions.act_window">
     <field name="name">DB Backup Policies</field>
-    <field name="res_model">infrastructure.db_back_up_policy</field>
+    <field name="res_model">infrastructure.db_backup_policy</field>
     <field name="view_type">form</field>
     <field name="view_mode">tree,form</field>
-    <field name="view_id" ref="view_infrastructure_db_back_up_policy_tree"/>
-    <field name="search_view_id" ref="view_infrastructure_db_back_up_policy_filter"/>
+    <field name="view_id" ref="view_infrastructure_db_backup_policy_tree"/>
+    <field name="search_view_id" ref="view_infrastructure_db_backup_policy_filter"/>
     <field name="domain">[]</field>
 </record>
 
 <menuitem
     name="DB Backup Policies"
-    id="menu_db_back_up_policies"
+    id="menu_db_backup_policies"
     sequence="100"
-    action="action_infrastructure_db_back_up_policy_db_back_up_policies"
+    action="action_infrastructure_db_backup_policy_db_backup_policies"
     parent="menu_databases_conf"
     groups="group_manager"
     />
