--- a/infrastructure/view/environment_view.xml
+++ b/infrastructure/view/environment_view.xml
@@ -71,6 +71,7 @@
                     <group>
                         <field name="path"/>
                         <field name="sources_path"/>
+                        <field name="backups_path"/>
                         <field name="partner_id"/>
                     </group>
                 </group>
