--- a/infrastructure/view/database_backup_view.xml
+++ b/infrastructure/view/database_backup_view.xml
@@ -11,6 +11,12 @@
         <tree string="Database Backups">
             <field name="name"/>
             <field name="create_date"/>
+            <button
+                string="Restore Database"
+                icon="gtk-go-up"
+                type="action"
+                name="%(action_infrastructure_restore_database_wizard)d"
+                help="Restore Database" context="{'search_default_database_backup_id': active_id}"/>
         </tree>
     </field>
 </record>
